--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppeeAndroid"
         tools:targetApi="31">
+        <activity android:name=".Payment"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
